--- a/document/book.bib
+++ b/document/book.bib
@@ -31,11 +31,11 @@
   file = {/Users/davidjohnbaker/Zotero/storage/LBZ5D7KG/Nichols et al. - 2018 - Score one for jazz Working memory in jazz and cla.pdf}
 }
 
-@techreport{NationalAssociationSchools2018,
+@techreport{NationalAssociationSchools2019,
   address = {Reston, Virginia},
   title = {National {{Association}} of {{Schools}} of {{Music Handbook}}},
   institution = {{National Association of Schools of Music}},
-  year = {2018},
+  year = {2019},
   file = {/Users/davidjohnbaker/Zotero/storage/GU9532NS/NASM-2017-18-Handbook.pdf}
 }
 
@@ -671,11 +671,12 @@
   doi = {10.1016/B978-0-12-381460-9.00012-2}
 }
 
-@article{rohrmeierBridgingMusicTheory,
+@article{rohrmeierBridgingMusicTheory2011,
   title = {Bridging {{Music Theory}}, {{Cognitive}} and {{Computational Approaches}}},
   abstract = {This article contributes to an interdisciplinary discussion of ways in which musictheoretical, cognitive, and computational accounts of musical expectancy may be bridged. It introduces some fundamental concepts concerning modeling, computation, representation, and some of their implications for theory building. Taking Markov models as a case in point, this paper illustrates in detail core notions of representation, model structure, parameter estimation, context-dependency, sparsity and overfitting, as well as the distinction between different levels of expectancy (short-term vs. long-term and knowledge-driven vs. data-driven vs. veridical) that interact in the context of musical listening. The final part compares local and hierarchical accounts of music and analyzes phenomena of nested implication-realization patterns, revision, and garden-path effects.},
   language = {en},
   author = {Rohrmeier, Martin},
+  year = {2011},
   pages = {30},
   file = {/Users/davidjohnbaker/Zotero/storage/5BVCGSI8/Rohrmeier - Bridging Music Theory, Cognitive and Computational.pdf}
 }
@@ -4527,6 +4528,22 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   pages = {396-421},
   file = {/Users/davidjohnbaker/Zotero/storage/64YLGLCT/Cleeremans and Dienes - 2008 - Computational Models of Implicit Learning.pdf},
   doi = {10.1017/CBO9780511816772.018}
+}
+
+@article{albrechtUseLargeCorpora2013,
+  title = {The {{Use}} of {{Large Corpora}} to {{Train}} a {{New Type}} of {{Key}}-{{Finding Algorithm}}: {{An Improved Treatment}} of the {{Minor Mode}}},
+  volume = {31},
+  issn = {07307829, 15338312},
+  shorttitle = {The {{Use}} of {{Large Corpora}} to {{Train}} a {{New Type}} of {{Key}}-{{Finding Algorithm}}},
+  doi = {10.1525/mp.2013.31.1.59},
+  language = {en},
+  number = {1},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Albrecht, Joshua and Shanahan, Daniel},
+  month = sep,
+  year = {2013},
+  pages = {59-67},
+  file = {/Users/davidjohnbaker/Zotero/storage/6FFSR3WA/Albrecht and Shanahan - 2013 - The Use of Large Corpora to Train a New Type of Ke.pdf}
 }
 
 
