--- a/document/references.bib
+++ b/document/references.bib
@@ -13,3 +13,17 @@
   pages = {59-67},
   file = {/Users/davidjohnbaker/Zotero/storage/6FFSR3WA/Albrecht and Shanahan - 2013 - The Use of Large Corpora to Train a New Type of Ke.pdf},
 }
+@Article{rentfrowReMiEveryday2003,
+  title = {The Do Re Mi's of Everyday Life: {{The}} Structure and Personality Correlates of Music Preferences.},
+  volume = {84},
+  issn = {1939-1315, 0022-3514},
+  shorttitle = {The Do Re Mi's of Everyday Life},
+  doi = {10.1037/0022-3514.84.6.1236},
+  language = {en},
+  number = {6},
+  journal = {Journal of Personality and Social Psychology},
+  author = {Peter J. Rentfrow and Samuel D. Gosling},
+  year = {2003},
+  pages = {1236-1256},
+  file = {/Users/davidjohnbaker/Zotero/storage/VW9596AP/Rentfrow and Gosling - 2003 - The do re mi's of everyday life The structure and.pdf},
+}
